# ScriptCollection

./: Install-WiFiPowerManager.ps1  README.md  customize_shell.sh  shell_profile
.github/workflows/: release.yml
epub_to_pdf/: IMPLEMENTATION_SUMMARY.md  PRE_RELEASE_CHECKLIST.md  README.md  epub_to_pdf.py  epub_to_pdf.spec  pyproject.toml
epub_to_pdf/scripts/: build_local.py  download_tinytex.py  test_tinytex_download.py
