[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "epub-to-pdf-cli"
version = "0.1.0"
description = "Convert EPUB files to PDF from the command line"
readme = "README.md"
requires-python = ">=3.9"
authors = [
    { name = "Your Name" }
]
dependencies = [
    "pypandoc>=1.13",
    "EbookLib>=0.18"
]

[project.scripts]
epub2pdf = "epub_to_pdf:main"
